--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -5,6 +5,9 @@
 
     --success:  #03b45f; 
     --danger:   #dd4744;
+
     --dark:     #1E2433;
+    --darker: #0a0c11;
+
     --light:    white;
 }
