Finish buy screen

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,6 +3,8 @@
     --light-primary: #98d4f7;
     --dark-primary: #064264;
 
+    --secondary: rgb(172, 82, 214);
+
     --success:  #03b45f; 
     --danger:   #dd4744;
 
