--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,14 +1,17 @@
 :root {
-    --primary:  #0092e7;
+    --primary:  #347FC4;
     --light-primary: #98d4f7;
-    --dark-primary: #064264;
+    --dark-primary: #022B3A;
 
-    --secondary: rgb(172, 82, 214);
+    --theme:#F1EAE4;
+    --theme-dark: #EAE0D7;
 
-    --success:  #03b45f; 
-    --danger:   #dd4744;
+    --secondary: #2B3A67;
 
-    --dark:     #1E2433;
+    --success:  #4C9F70 ; 
+    --danger:   #DD2D4A;
+
+    --dark:     #272838;
     --darker: #0a0c11;
 
     --light:    white;
