--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,24 @@ input:focus,textarea:focus {
     box-shadow: 0 10px 20px rgba(0,0,0,0.08), 0 6px 6px rgba(0,0,0,0.12);
 }
 
+.field {
+    margin: 1rem 0;
+}
+
+.inline-fields .field {
+    display: inline-block;
+    margin-right: 1rem;
+}
+
+.field label {
+    display: block;
+}
+
+.field textarea {
+    width: 30rem;
+    height: 5rem;
+}
+
 ::-webkit-scrollbar-track
 {
 	border-radius: 10px;
