--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,12 +27,12 @@ h1,
 
 h2,
 .h2 {
-    font-size: 2.25rem;
+    font-size: 2rem;
 }
 
 h3,
 .h3 {
-    font-size: 2rem;
+    font-size: 1.80rem;
 }
 
 h4,
@@ -143,5 +143,35 @@ input:focus,textarea:focus {
 
     .point-info b {
         font-size: 1.5rem;
+    }
+
+    h1,
+    .h1 {
+        font-size: 2rem;
+    }
+
+    h2,
+    .h2 {
+        font-size: 1.75rem;
+    }
+
+    h3,
+    .h3 {
+        font-size: 1.5rem;
+    }
+
+    h4,
+    .h4 {
+        font-size: 1.25rem;
+    }
+
+    h5,
+    .h5 {
+        font-size: 1rem;
+    }
+
+    h6,
+    .h6 {
+        font-size: 1rem;
     }
 }
